--- a/src/app/bulletin/bulletin.component.html
+++ b/src/app/bulletin/bulletin.component.html
@@ -1,27 +1,21 @@
 <div class="p-3 overflow-y-scroll h-screen w-full">
-  <h1
-    class="mb-4 text-4xl font-bold leading-none tracking-tight text-sky-500 md:text-5xl lg:text-6xl"
-  >
-    {{ bulletinName }}
+  <h1 class="mb-4 text-4xl font-bold leading-none tracking-tight text-sky-500 md:text-5xl lg:text-6xl">
+    {{ currentBulletin?.title }}
+  </h1>
+  <h1 class="mb-4 text-3xl font-bold leading-none tracking-tight text-sky-500 md:text-4xl lg:text-5xl">
+    Code: {{ currentBulletin?.joinCode }}
   </h1>
   <div class="flex flex-row flex-wrap gap-2">
     @if (isAdding) {
     <app-thing text="" id="editing" [isAdding]="true"></app-thing>
     } @for (thing of things; track thing.id) {
-    <app-thing
-      [canEdit]="thing.canEdit"
-      [canDelete]="thing.canDelete"
-      [text]="thing.text"
-      [id]="thing.id"
-      [likes]="thing.likes"
-      [liked]="thing.liked"
-    ></app-thing>
+    <app-thing [canEdit]="thing.canEdit" [canDelete]="thing.canDelete" [text]="thing.text" [id]="thing.id"
+      [likes]="thing.likes" [liked]="thing.liked"></app-thing>
     }
   </div>
   <button
     class="absolute flex align-middle justify-center bottom-6 right-10 w-15 h-15 border border-sky-400 rounded-full text-white bg-sky-400 drop-shadow-sm enabled:hover:bg-white hover: enabled:hover:text-sky-400 enabled:cursor-pointer disabled:cursor-not-allowed"
-    (click)="onAdd()"
-  >
+    (click)="onAdd()">
     <span class="text-6xl -mt-[7px]">+</span>
   </button>
 </div>
