--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
   <hr
     class="mt-4 mb-4 w-80 border-t border-stone-200 dark:border-stone-600 self-center"
   />
-  @if (isBulletin() || isCreate()) { <app-user-form />} @else {
+  @if ((isBulletin() || isCreate()) && !(userService.isAuthenticated$ | async)) { <app-user-form /> } @else {
   <button
     class="text-3xl ml-4 font-bold text-neutral-700 mt-2 cursor-pointer self-baseline"
     (click)="goToHome()"
@@ -39,5 +39,14 @@
     Create
   </button>
   <hr class="mt-2 mb-4 w-80 border-t border-stone-300 self-center" />
+  }
+  @if (userService.isAuthenticated$ | async) {
+    <button
+      class="w-32 m-5 text-xl font-bold text-white bg-sky-400 p-2 rounded-xl drop-shadow-sm enabled:hover:bg-white enabled:hover:text-sky-400 enabled:cursor-pointer self-center"
+      (click)="logout()"
+    >
+      Logout
+    </button>
+    <app-bulletin-list />
   }
 </div>
