--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,6 +1,6 @@
 <form
+  [formGroup]="userForm"
   (ngSubmit)="onSubmit()"
-  #userForm="ngForm"
   class="flex flex-col text-left m-2 mb-1"
 >
   <label class="text-2xl font-bold text-neutral-600">Email</label>
@@ -10,10 +10,8 @@
     name="email"
     placeholder="Email..."
     class="outline-0 bg-white p-2 mt-2 mb-2 border-neutral-200 border-1 rounded-lg drop-shadow-sm"
-    [(ngModel)]="user.email"
-    required
-    email
-  />
+    formControlName="email"
+    />
   <label class="text-2xl font-bold text-neutral-600 mt-2">Password</label>
   <input
     type="password"
@@ -21,15 +19,12 @@
     name="password"
     placeholder="Password..."
     class="outline-0 bg-white p-2 mt-2 mb-2 border-neutral-200 border-1 rounded-lg drop-shadow-sm"
-    [(ngModel)]="user.password"
-    required
-    minlength="8"
-    maxlength="30"
+    formControlName="password"
   />
   <button
     type="submit"
-    [disabled]="userForm.invalid"
     class="text-2xl font-bold text-white mt-2 bg-sky-400 p-1 border-1 rounded-xl drop-shadow-sm enabled:hover:bg-white hover: enabled:hover:text-sky-400 enabled:cursor-pointer disabled:cursor-not-allowed"
+    [disabled]="!userForm.valid"
   >
     Log In
   </button>
